# coom

./: .gitignore  CMakeLists.txt  CMakeSettings.json  imgui.ini
cmake/: Conan.cmake  StandardProjectSettings.cmake
include/: optick.config.h
src/: CMakeLists.txt  OptiXDenoiser.h  common.h  cuda_wrapper.h  event_handler.cpp  event_handler.hpp  exception.h  glad.c  glad.h  main.cpp  options.cpp  optixDenoiser.cpp  pathtracer.hpp  projectile.cpp  sounds.hpp  test.h
src/scenes/: full_screen_opengl.cpp  full_screen_opengl.cu  full_screen_opengl.h
